# Faceoff_MSAI605

./: .gitignore  Dockerfile  README.md  milestone2_guide.txt  pyproject.toml  pytest.ini  requirements.txt
.pair_strategy_check/: manifest.json  splits.json
.pair_strategy_check/baseline/: pairs_manifest.json
.pair_strategy_check/improved/: pairs_manifest.json
artifacts/real_eval/: baseline_eval_pairs.csv  improved_eval_pairs.csv  m3_sample_pairs.csv
configs/: benchmark.yaml  lfw_ingest.yaml  m1.yaml  m2_baseline.yaml  m2_improved.yaml  m3_inference.yaml  pairs.yaml
manual_validation_checks/: bad.yaml  bad_label.csv  train.csv
reports/: README.md  infer_results.json  load_test_results.json  milestone2_report.md  milestone2_report_real_2page.docx  profiling_results.json  real_run_comparison.csv  real_run_comparison.md  report_manifest.json  reproducibility_checklist.md  run_comparison.csv  run_comparison.md  system_card.md  tracked_runs_summary.json  ~$lestone2_report_real_2page.docx
scripts/: bench_similarity.py  benchmark_similarity.py  evaluate_pairs.py  extract_error_slices.py  generate_pairs.py  infer_pairs.py  ingest_lfw.py  load_test.py  make_pairs.py  profile_inference.py  run_tracked_eval.py
src/lfw_verif/: confidence.py  dataset.py  embeddings.py  features.py  (+13 more)
tests/: test_determinism.py  test_eval_config.py  test_evaluate_pairs.py  test_features.py  test_images.py  test_inference.py  test_integration_eval.py  test_metrics.py  test_plots.py  test_scoring.py  test_similarity.py  test_slices.py  test_smoke.py  test_thresholds.py  test_validation.py
(+30 files in other folders)
