[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfw-verification"
version = "0.2.0"
description = "Reproducible LFW face-verification pipeline with deterministic data prep, evaluation, and inference utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "facenet-pytorch>=2.6",
  "matplotlib>=3.9",
  "numpy>=1.22",
  "pandas>=1.5",
  "Pillow>=10.4",
  "pyyaml>=6.0",
  "torch>=2.5",
  "torchvision>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
